--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -2,13 +2,26 @@ modLoader="javafml" #mandatory
 loaderVersion="[26,)" #mandatory (26 is current forge version)
 [[mods]] #mandatory
 modId="bettertobacco" #mandatory
-version="${file.jarVersion}" #mandatory
-displayName="BetterTobacco" #mandatory
+version="0.0.1" #mandatory
+displayName="Better Tobacco" #mandatory
 #logoFile="examplemod.png" #optional
 credits="With lots of love and passion FROM and FOR tobacco lovers <3" #optional
-authors="VenelALEX" #optional
+authors="VenelALEX, fISHICAL" #optional
 description='''
-BetterTobacco Mod Description - Coming soon.
+The BetterTobacco Mod aims to implement tobacco and various products from the tobacco industry in Minecraft. 
+Please respect the fact that you are not allowed to smoke until you reach the age of 18. :)
+----------------------------------
+
+Visit Mod-Creators on GitHub:
+
+https://github.com/AlexanderBrenner
+https://github.com/konstfish
+
+----------------------------------
+
+Also check out our GitHub Repo for announcments and updates:
+
+https://github.com/AlexanderBrenner/BetterTobaccoMod
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.bettertobacco]] #optional
