--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,5 +27,5 @@ jobs:
     - name: Get File
       uses: actions/upload-artifact@v1
       with:
-        name: bettertobaccomod.jar
-        path: build/libs/modid-0.0.1.jar
+        name: bettertobaccomod
+        path: build/libs/
