--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,7 +6,7 @@ version="0.0.2" #mandatory
 displayName="Better Tobacco" #mandatory
 logoFile="bt_logo.png"
 credits="With lots of love and passion FROM and FOR tobacco lovers <3" #optional
-authors="VenelALEX, fISHICAL"
+authors="VenelALEX, fISHICAL, Rafael Schreiber"
 issueTrackerURL="https://github.com/VenelALEX/BetterTobaccoMod/issues"
 displayURL="https://github.com/VenelALEX/BetterTobaccoMod"
 description='''
@@ -18,6 +18,7 @@ Visit Mod-Creators on GitHub:
 
 https://github.com/VenelALEX
 https://github.com/konstfish
+https://github.com/rafaelschreiber
 
 ----------------------------------
 
