--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,6 +5,8 @@ name: Java CI with Gradle
 
 on:
   push:
+    paths:
+    - 'src/**'
     branches: [ master ]
   pull_request:
     branches: [ master ]
@@ -15,6 +17,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
